--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 
     <groupId>info.ziang</groupId>
     <artifactId>za-mvn-repo</artifactId>
-    <!--packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version-->
-    <name>ZaMvnRepo</name>
-    <url>http://maven.apache.org</url>
+    <version>1.0-SNAPSHOT</version>
 
+    <name>ZaMvnRepo</name>
+    <packaging>pom</packaging>
+    <url>http://maven.apache.org</url>
 
     <modules>
         <module>jlib</module>
